tests/should_fail/syntax_while_let_var_exists.nv
module main

// SHOULD FAIL: while-let binding variable that already exists
let x: Option(Int) = Some(42)
let v = 99
while let v = x {
    println(v)
}
